--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="sequencer">
+        <h1>zaBeatMaker</h1>
         <div class="kick-track">
             <div class="controls">
                 <h2>Kick</h2>
@@ -80,8 +81,8 @@
                 <div class="pad hihat-pad b7"></div>
             </div>
         </div>
+        <button class="play">Play</button>
     </div>
-    <button class="play">Play</button>
     <audio class="kick-sound" src="./sounds/kick-classic.wav"></audio>
     <audio class="snare-sound" src="./sounds/snare-acoustic01.wav"></audio>
     <audio class="hihat-sound" src="./sounds/hihat-acoustic01.wav"></audio>
