Add function to change sounds.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <option value="./sounds/kick-classic.wav">Classic Kick</option>
                     <option value="./sounds/kick-808.wav">808 Kick</option>
                     <option value="./sounds/kick-heavy.wav">Heavy Kick</option>
-                    <!-- <option value="./sounds/kick-softy.wav">Soft Kick</option> -->
+                    <option value="./sounds/kick-softy.wav">Soft Kick</option>
                 </select>
             </div>
             <div class="kick">
@@ -67,7 +67,7 @@
                 <select name="hihat-select" id="hihat-select">
                     <option value="./sounds/hihat-acoustic01.wav">Hihat Acoustic</option>
                     <option value="./sounds/hihat-808.wav">808 Snare</option>
-                    <!-- <option value="./sounds/hihat-acoustic02.wav">Acoustic Hihat</option> -->
+                    <option value="./sounds/hihat-acoustic02.wav">Acoustic Hihat</option>
                 </select>
             </div>
             <div class="hihat">
