--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beatmaker</title>
+    <title>zaBeatmaker</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./icons/drum-1-svgrepo-com.svg">
 </head>
@@ -82,6 +82,10 @@
             </div>
         </div>
         <button class="play">Play</button>
+        <div class="tempo">
+            <input type="range" class="tempo-slider" max="300" min="20" value="150">
+            <p>Tempo: <span class="tempo-num">150</span></p>
+        </div>
     </div>
     <audio class="kick-sound" src="./sounds/kick-classic.wav"></audio>
     <audio class="snare-sound" src="./sounds/snare-acoustic01.wav"></audio>
